--- a/assets/css/module.scss
+++ b/assets/css/module.scss
@@ -26,11 +26,13 @@
 }
 
 .main-nav {
+
     background: #fff;
     z-index: 150;
     box-shadow: 0 2px 3px rgba(0,0,0,.4);
     position: relative;
     text-align: center;
+    margin-bottom: -80px;
     a {
      color: #555555;
      font-family: $secondaryFont;
